# geekbang_task_demo

./: .gitignore  .todo-config.json  Cargo.toml  README.md
docs/: phase_1.md  phase_2.md  phase_3.md  phase_4.md
migrations/2021-01-06-074202_create_users/: up.sql
migrations/2021-01-06-075725_create_tasks/: up.sql
src/: constants.rs  database.rs  main.rs  models.rs
src/databases/: task.rs  user.rs
src/models/: task.rs  user.rs
src/services/: account_service.rs  task_service.rs
