[package]
name = "geekbang_task_demo"
version = "0.1.0"
authors = ["Caitlin Gao <caitlin.gaoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }

serde_json = "1.0.60"
serde_derive = "1.0.118"
serde = { version = "1.0", features = ["derive"] }

structopt = "0.3"

diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"

bcrypt = "0.8"

itertools = "0.10"
